  * Mention environment variables in apache2 and apache2ctl man pages and point
    to README.Debian. (Closes: #475150)
  * Drop unneeded build-dep on libtool.
  * Drop obsolete apache2-mpm-perchild package (closes: #477522).
  * Don't fail in postinst if there is a dangling symlink /var/www/index.html.
  * Fix typo in bug number in 2.2.8-3 changelog entry.

 -- Stefan Fritsch <sf@debian.org>  Fri, 14 Mar 2008 23:34:36 +0100

apache2 (2.2.8-4) unstable; urgency=high

  * Urgency high for DoS vulnerability fix.
  * Fix memory leak in mod_ssl with zlib compression.

 -- Stefan Fritsch <sf@debian.org>  Tue, 13 May 2008 22:31:37 +0200

apache2 (2.2.8-3) unstable; urgency=low

  * mod_cache: Handle If-Range correctly if the cached resource was stale
    (closes: #470652).
  * mod_autodindex: Use UTF-8 as character set for filenames in the default
    configuration. Change this in autoindex.conf if you are still using
    ISO-8859-1.
  * Introduce APACHE_RUN_DIR and APACHE_LOCK_DIR in apache2ctl. Also, make it
    use APACHE_RUN_USER instead of APACHE2_RUN_USER, to be consistent with
    apache2.conf.
  * Add 'status' function to init script (adapted from patch by Dustin
    Kirkland).
  * Don't build the modules three times. We are only shipping one set of them,
    anyway. (Inspired by the Fedora package.)
  * Remove Fabio M. Di Nitto from the uploaders field (thanks for your work).

 -- Stefan Fritsch <sf@debian.org>  Fri, 14 Mar 2008 10:57:19 +0100

apache2 (2.2.8-2) unstable; urgency=low

  * Provide a fallback access log (other_vhosts_access.log) and a suitable
    LogFormat (vhost_combined) for VirtualHosts that don't define their own
    log file. (Closes: #313430)
  * Fix broken symlink to README.Debian.gz and typos in the file
    (closes: #461462).
  * Improve generation of password salts in htpasswd (closes: #469271).
  * Point VCS tags in debian control to trunk, to make them useful with
    debcheckout.